--- a/src/Components/UserCount/UserCountCard.module.css
+++ b/src/Components/UserCount/UserCountCard.module.css
@@ -1,8 +1,10 @@
 .userCountCard {
-  background-color: #fff;
+  background-color: #c6c6c6e6;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  width: 20vw;
+
 }
 
 .title {
@@ -14,4 +16,5 @@
 .count {
   font-size: 24px;
   font-weight: bold;
+  
 }
