--- a/src/Components/UserModule/UserModule.module.css
+++ b/src/Components/UserModule/UserModule.module.css
@@ -48,7 +48,7 @@ li {
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem;
-  background-color: #fff;
+  background-color: #00d0ff46;
   border-radius: 3px;
   margin-bottom: 0.5rem;
 }
