--- a/src/Components/SideBar/SideBar.module.css
+++ b/src/Components/SideBar/SideBar.module.css
@@ -1,7 +1,7 @@
 .sidebar {
     height: 100vh;
     width:20vw;
-    background-color: #f1f1f1;
+    background-color: #2d2b2b;
   }
   
   .sidebar__menu {
