--- a/src/Components/SideBar/SideBar.module.css
+++ b/src/Components/SideBar/SideBar.module.css
@@ -1,27 +1,22 @@
 .sidebar {
-    height: 100vh;
-    width:20vw;
-    background-color: #2d2b2b;
-  }
-  
-  .sidebar__menu {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .sidebar__menu-item {
-    padding: 10px;
-   
-  }
-  
-  .sidebar__menu-item a {
-    color: #333;
-   
-  }
-  
-  .sidebar__menu-item a:hover {
-    color: #666;
-  }
-  
-  
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  width: 200px;
+}
+
+.link {
+  display: block;
+  margin-bottom: 10px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.logoutButton {
+  background-color: #f44336;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
