--- a/src/Components/UserModule/UserModule.module.css
+++ b/src/Components/UserModule/UserModule.module.css
@@ -1,71 +1,65 @@
 .userModule {
-  background-color: #f5f5f5;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 2rem;
+  width: 45vw;
+  margin-left: 18vw;
 }
 
-h2 {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-  text-align: center;
+.userModule h2 {
+  font-size: 24px;
+  font-weight: bold;
 }
 
-h3 {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-}
-
-input[type="text"] {
-  width: 100%;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
+.userModule input {
+  margin-bottom: 10px;
+  padding: 8px;
+  width: 200px;
   border: 1px solid #ccc;
-  border-radius: 3px;
-}
-
-button {
-  padding: 0.5rem 1rem;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+  border-radius: 4px;
   
 }
 
-button:hover {
-  background-color: #0056b3;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.5rem;
-  background-color: #00d0ff46;
-  border-radius: 3px;
-  margin-bottom: 0.5rem;
-}
-
-li span {
-  margin-right: 1rem;
-}
-
-li button {
-  padding: 0.3rem 0.5rem;
-  background-color: #dc3545;
-  color: #fff;
+.userModule button {
+  padding: 8px 16px;
+  background-color: #06cdf0;
+  color: white;
   border: none;
-  border-radius: 5px;
+  border-radius: 4px;
   cursor: pointer;
 }
 
-li button:hover {
-  background-color: #b02935;
+.userModule button:hover {
+  background-color: #00b3ff;
+}
+
+.userTable {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.userTable th,
+.userTable td {
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
+}
+
+.userTable th {
+  background-color: #f2f2f2;
+  font-weight: bold;
+  text-align: left;
+}
+
+.userTable tr:last-child td {
+  border-bottom: none;
+}
+
+.userTable button {
+  background-color: transparent;
+  border: none;
+  color: #0066cc;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.userTable button:hover {
+  color: red;
 }
