--- a/src/Components/Chart/BarChart.module.css
+++ b/src/Components/Chart/BarChart.module.css
@@ -1,15 +1,16 @@
 .barChartContainer {
     margin-top: 3rem;
     padding: 2rem;
-    background-color: rgb(250, 250, 118);
+    background-color: rgb(118, 250, 175);
     border-radius: 10px;
   }
   .barChartContainer:hover{
-    background-color: yellow;
+    background-color: rgb(0, 255, 213);
   }
   
   .chartTitle {
     font-size: 1.5rem;
-    margin-bottom: 1rem;
+    margin-top: 0;
+    text-align: center;
   }
   
